ves-middle/tests/t16_struct_doesnt_declare_as_sub_expr.test
let s = (struct A {});
s();
A(); // undefined

%output

error: Undefined variable `A`
  ┌─ <source: #7a1410220645f47c>:3:1
  │
3 │ A(); // undefined
  │ ^